Revert "change Index title"
This reverts commit ab9f88bb8d1d4330709b92063d5d922a8e60a60b.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Eugenia Maria Azevedo Salomao | Arquitecta Investigadora </title>
+    <title>Eugenia Azevedo Salomao | Arquitecta Investigadora</title>
     <link rel="icon" href="img/favicon.ico">
   </head>
   <body>
