--- a/publicaciones.html
+++ b/publicaciones.html
@@ -5,6 +5,11 @@
   <meta charset="utf-8">
   <title>Eugenia Azevedo Salomao | Biografía</title>
   <link rel="icon" href="img/favicon.ico">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,700;0,900;1,400&display=swap" rel="stylesheet">
 </head>
 
 <body>
