--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
   <meta charset="utf-8">
   <title>Eugenia Azevedo Salomao | Arquitecta Investigadora</title>
   <link rel="icon" href="img/favicon.ico">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body>
+<body id="home-pages">
 
   <header>
     <div>
@@ -309,15 +315,15 @@
   </header>
 
   <main>
-    <div class="Hero">
+    <div class="Hero" id="Hero">
       <div>
         <h1>Dra. Eugenia Maria Azevedo Salomao</h1>
         <span>Arquitecta Investigadora</span>
-        <p>Soy investigadora en el campo de la historia de la arquitectura y el urbanismo y conservación del patrimonio cultural. Me interesa la formación de recursos humanos de calidad y producir conocimientos que impacten en la mejora de la
-          habitabilidad.</p>
+        <h3>Soy investigadora en el campo de la historia de la arquitectura y el urbanismo y conservación del patrimonio cultural. Me interesa la formación de recursos humanos de calidad y producir conocimientos que impacten en la mejora de la
+          habitabilidad.</h3>
       </div>
     </div>
-    <div class="Projects">
+    <div class="Projects" id="Projects">
       <div>
         <h2>Selección de trabajos</h2>
         <div class="Grid-proj">
@@ -333,7 +339,7 @@
             </h3>
             <p>El libro Restauración de inmuebles históricos. Preparatoria “Ing. Pascual Ortiz Rubio”, Universidad Michoacana de San Nicolás de Hidalgo, ofrece al lector los fundamentos teórico-metodológicos para la intervención del patrimonio
               cultural edificado. Va dirigido a especialistas y estudiantes interesados en el tema y público en general. Se encuentra disponible en Amazon.</p>
-            <a href="libro.html">Ver más</a>
+            <a href="libro.html" class="primary-button">Ver más</a>
           </div>
         </div>
         <div class="Grid-proj">
@@ -349,7 +355,7 @@
             </h3>
             <p>El capítulo indaga bajo cuáles circunstancias culturales, políticas y sociales, emergieron los proyectos de intervención del centro de la capital michoacana, haciendo hincapié en la legislación local y en cómo ésta incidió en el
               patrimonio urbano-arquitectónico, sociedad y vida cotidiana.</p>
-            <a href="http://plataforma.cuaad.udg.mx/documentos_cuaad/Vol%202%20La%20irrupci%C3%B3n%20de%20las%20PP%20en%20la%20vida%20cotidiana.pdf" target="_blank">Ver documento</a>
+            <a href="http://plataforma.cuaad.udg.mx/documentos_cuaad/Vol%202%20La%20irrupci%C3%B3n%20de%20las%20PP%20en%20la%20vida%20cotidiana.pdf" target="_blank" class="primary-button">Ver documento</a>
           </div>
         </div>
         <div class="Grid-proj">
@@ -366,7 +372,7 @@
             <h4>Revista PatryTer v. 3, n. 5 (2020)</h4>
             <p>El artículo realizado en coautoría con Luis Alberto Torres Garibay, propone la reflexión en torno a temas emergentes vinculados a modos de vida, sostenibilidad y patrimonialización con el ejemplo del grupo étnico latinoamericano – el
               purépecha - con el propósito de contribuir a la resignificación de posturas teóricas y prácticas en la conservación y gestión del patrimonio cultural material e inmaterial.</p>
-            <a href="https://doi.org/10.26512/patryter.v3i5.25783" target="_blank">Ver documento</a>
+            <a href="https://doi.org/10.26512/patryter.v3i5.25783" target="_blank" class="primary-button">Ver documento</a>
           </div>
         </div>
       </div>
@@ -378,7 +384,7 @@
       <h1>Ponte en contacto</h1>
       <p>¿Te gustaría formar parte de mi red? No dudes en contactarme. Teléfono: <a href="tel: +524435285057">+52 4435285057.</a></p>
       <div class="Mail-button">
-        <a href="mailto:eazevedosa@yahoo.com.mx">Mandar email</a>
+        <a href="mailto:eazevedosa@yahoo.com.mx" target="_blank" class="primary-button">Mandar email</a>
       </div>
       <div class="social-media">
         <a href="linkedin-url">
