--- a/libro.html
+++ b/libro.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Eugenia Azevedo Salomao | Biografía</title>
+  <title>Eugenia | Biografía</title>
   <link rel="icon" href="img/favicon.ico">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -220,11 +220,11 @@
     <div class="container">
     <h1>Restauración de inmuebles históricos.</h1>
     <h1>Preparatoria “Ing. Pascual Ortiz Rubio”</h1>
-    <div class="row">
+    <div class="row2">
       <div class="column">
         <p>El libro Restauración de inmuebles históricos. Preparatoria “Ing. Pascual Ortiz Rubio”, Universidad Michoacana de San Nicolás de Hidalgo, ofrece al lector los fundamentos teórico-metodológicos para la intervención del patrimonio cultural
           edificado. Va dirigido a especialistas y estudiantes interesados en el tema y público en general. Se encuentra disponible en Amazon.</p>
-        <div>
+        <div class="button-container-img">
           <a href="https://www.amazon.com.mx/Restauraci%C3%B3n-inmuebles-hist%C3%B3ricos-Preparatoria-Universidad/dp/B087FGVS6N" target="_blank" class="button-img">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" fill="#c68866" height="35px" width="35px">
               <path
@@ -258,18 +258,20 @@
     <p>Esta complejidad es domada con base en sistematicidad, de claridad metodológica, de entendimiento de los procesos (de producción, de transformación, de adecuación, de deterioro-obsolescencia, de restauración) y, finalmente, de la comprensión
       de que cada objeto a intervenir es único y requiere, aún dentro de ese sistema y ese método, y dentro de cada uno de los procesos en los que se inserta, de un tratamiento único, sin recetas, pero con una respuesta clara y contundente a lo que
       cada caso exige, significa, representa.</p>
-    <div class="row">
-      <picture>
-        <source srcset="img/book/Proj1-2_@1x.jpg" media="(max-width:767px)">
-        <img src="img/book/Proj1-2_@2x.jpg" alt="Preparatoria Ing. Pascual Ortiz Rubio Imagen">
-      </picture>
-      <div class="column">
-        <p>Y es así como Eugenia María Azevedo Salomao y Luis Alberto Torres Garibay abordan un caso, altamente significativo por la efeméride del 100 aniversario de la fundación de la Universidad Michoacana de San Nicolás de Hidalgo y por la
+    <div class="row2">
+      <div class="col-md-6">
+        <picture>
+          <source srcset="img/book/Proj1-2_@1x.jpg" media="(max-width:767px)">
+          <img src="img/book/Proj1-2_@2x.jpg" alt="Preparatoria Ing. Pascual Ortiz Rubio Imagen">
+        </picture>
+      </div>
+      <div class="col-md-6">
+        <p class="no-margin">Y es así como Eugenia María Azevedo Salomao y Luis Alberto Torres Garibay abordan un caso, altamente significativo por la efeméride del 100 aniversario de la fundación de la Universidad Michoacana de San Nicolás de Hidalgo y por la
           representatividad del inmueble a intervenir, una escuela Preparatoria de la umsnh que lleva el nombre del Gobernador de Michoacán, el ingeniero Pascual Ortiz Rubio, bajo cuyo mandato e iniciativa, en 1917, se realizó tal fundación.</p>
-        <p> Como explican los autores, la escuela Preparatoria actualmente está conformada por dos edificaciones históricas, el edificio principal que fue creado como el segundo Seminario Diocesano (Tridentino) de Morelia en la etapa porfirista y el
-          que en la actualidad se conoce como el Anexo a la Preparatoria, el cual fue seleccionado para la elaboración del proyecto de intervención, debido al precario estado de conservación en que se encuentra.</p>
       </div>
     </div>
+    <p> Como explican los autores, la escuela Preparatoria actualmente está conformada por dos edificaciones históricas, el edificio principal que fue creado como el segundo Seminario Diocesano (Tridentino) de Morelia en la etapa porfirista y el
+      que en la actualidad se conoce como el Anexo a la Preparatoria, el cual fue seleccionado para la elaboración del proyecto de intervención, debido al precario estado de conservación en que se encuentra.</p>
     <p>Pero se trata de un inmueble con una larga historia, que se remonta a muchos años antes de la creación de la Universidad Nicolaíta y muchos más antes de que el edificio se destinara a la enseñanza media superior. Las raíces del inmueble son
       coloniales, aunque su factura es decimonónica; los autores nos dicen que estuvo destinado para ser un convento de carmelitas descalzas (Monjas Teresas), pero que por una larga serie de vicisitudes, no llegaron las religiosas de esta Orden a
       ocupar el edificio y tras una secuela de cambios de uso y de usuarios disímbolos, se convierte finalmente en parte de una escuela Preparatoria de la Universidad. Lo relevante en este caso es que el inmueble histórico que forma parte de la
@@ -285,10 +287,10 @@
       académico de casos reales, significativos y urgentes, en la forma por excelencia de aprendizaje para docentes y alumnos y a través de medios de divulgación como lo es este libro, en formas de enriquecimiento de la disciplina de la Conservación
       y de la Restauración, así como de la cultura en general, en los ámbitos local, nacional y global.</p>
     <p>En tal sentido y por tal motivo, considero a este trabajo como una valiosa y rica aportación. Bienvenida sea.</p>
-    <div class="row">
-      <div class="column">
-        <h3>¡Adquiere tu libro ahora!</h3>
-        <div>
+    <div class="row2">
+      <div class="col-md-6">
+        <h3 class="align-text">¡Adquiere tu libro ahora!</h3>
+        <div class="button-container-img2">
           <a href="https://www.amazon.com.mx/Restauraci%C3%B3n-inmuebles-hist%C3%B3ricos-Preparatoria-Universidad/dp/B087FGVS6N" target="_blank" class="button-img">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" fill="#c68866" height="35px" width="35px">
               <path
@@ -298,12 +300,20 @@
             Comprar libro</a>
         </div>
       </div>
-      <picture>
-        <source srcset="img/book/Proj1-3_@1x.jpg" media="(max-width:767px)">
-        <img src="img/book/Proj1-3_@2x.jpg" alt="Preparatoria Ing. Pascual Ortiz Rubio Imagen">
-      </picture>
+      <div class="col-md-6">
+
+        <div>
+          <picture class="book-img-container">
+          <source srcset="img/book/Proj1-3_@1x.jpg" media="(max-width:767px)">
+          <img src="img/book/Proj1-3_@2x.jpg" alt="Preparatoria Ing. Pascual Ortiz Rubio Imagen" class="book-img">
+        </picture>
+        </div>
+        </div>
     </div>
-    <a href="publicaciones.html" class="primary-button">Ver publicaciones</a>
+    <div class="button-container">
+      <a href="publicaciones.html" class="primary-button">Ver publicaciones</a>
+    </div>
+
     </div>
   </main>
 
@@ -311,13 +321,13 @@
     <div class="hero" id="Hero">
       <picture class="hero-image">
         <source srcset="img/footer_@1x.jpg" media="(max-width:560px)">
-        <source srcset="img/footer_@2x.jpg" media="(max-width:767px)">
+        <source srcset="img/footer_@2x.jpg" media="(max-width:768px)">
         <img src="img/footer_@3x.jpg" alt="footer image">
       </picture>
     <div class="hero-text">
       <h1>Ponte en contacto</h1>
       <p>¿Te gustaría formar parte de mi red? No dudes en contactarme. Teléfono: <a href="tel: +524435285057">+524435285057.</a></p>
-      <div class="button-container">
+      <div class="button-container2">
         <div class="center-button">
           <a href="mailto:eazevedosa@yahoo.com.mx" target="_blank" class="primary-button">Mandar email</a>
         </div>
