--- a/index.html
+++ b/index.html
@@ -255,10 +255,102 @@
         </div>
         <div class="row">
           <div class="col-md-6">
-            <picture>
-              <source srcset="img/home/Proj2_@1x.jpg" media="(max-width:767px)">
-              <img src="img/home/Proj2_@2x.jpg" alt="Centro Histórico de Morelia">
-            </picture>
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1170.4 1440.9" style="enable-background:new 0 0 1170.4 1440.9;" xml:space="preserve">
+              <g id="morelia">
+                <path
+                  d="M1097.8,623.4c9.6,0,17.4-7.8,17.4-17.4v-69.8c0-9.6-7.8-17.4-17.4-17.4h-52.3v-34.9h17.4c9.6,0,17.4-7.8,17.4-17.4
+                s-7.8-17.4-17.4-17.4h-17.4v-17.4c0-22.2-14-41.9-34.9-49.3v-20.4c0-9.6-7.8-17.4-17.4-17.4c-9.6,0-17.4,7.8-17.4,17.4v20.4
+                c-20.9,7.4-34.9,27.2-34.9,49.3v17.4h-17.4c-9.6,0-17.4,7.8-17.4,17.4s7.8,17.4,17.4,17.4h17.4v34.9h-52.3
+                c-9.6,0-17.4,7.8-17.4,17.4v69.8c0,9.6,7.8,17.4,17.4,17.4h17.4v104.7h-17.4c-9.6,0-17.4,7.8-17.4,17.4s7.8,17.4,17.4,17.4h17.4
+                v69.8h-17.4c-9.6,0-17.4,7.8-17.4,17.4c0,9.6,7.8,17.4,17.4,17.4h17.4v34.9h-34.9v-17.4c0-22.2-14-41.9-34.9-49.3v-20.4
+                c0-9.6-7.8-17.4-17.4-17.4s-17.4,7.8-17.4,17.4v20.4c-20.9,7.4-34.9,27.2-34.9,49.3v17.4h-34.9v-87.2c0-9.6-7.8-17.4-17.4-17.4
+                s-17.4,7.8-17.4,17.4v69.8c-15.1-11.4-33.5-17.5-52.3-17.5v-87.2c0-22.2-14-41.9-34.9-49.3v-55.3c0-9.6-7.8-17.4-17.4-17.4
+                c-9.6,0-17.4,7.8-17.4,17.4v55.3c-20.9,7.4-34.9,27.2-34.9,49.3v87.2c-18.9,0-37.3,6.1-52.3,17.5v-69.8c0-9.6-7.8-17.4-17.4-17.4
+                c-9.6,0-17.4,7.8-17.4,17.4v87.2h-34.9v-17.4c0-22.2-14-41.9-34.9-49.3v-20.4c0-9.6-7.8-17.4-17.4-17.4c-9.6,0-17.4,7.8-17.4,17.4
+                v20.4c-20.9,7.4-34.9,27.2-34.9,49.3v17.4h-34.9v-34.9h17.4c9.6,0,17.4-7.8,17.4-17.4c0-9.6-7.8-17.4-17.4-17.4h-17.4V763h17.4
+                c9.6,0,17.4-7.8,17.4-17.4s-7.8-17.4-17.4-17.4h-17.4V623.4h17.4c9.6,0,17.4-7.8,17.4-17.4v-69.8c0-9.6-7.8-17.4-17.4-17.4h-52.3
+                v-34.9h17.4c9.6,0,17.4-7.8,17.4-17.4s-7.8-17.4-17.4-17.4h-17.4v-17.4c0-22.2-14-41.9-34.9-49.3v-20.4c0-9.6-7.8-17.4-17.4-17.4
+                S173,352,173,361.7v20.4c-20.9,7.4-34.9,27.2-34.9,49.3v17.4h-17.4c-9.6,0-17.4,7.8-17.4,17.4s7.8,17.4,17.4,17.4h17.4v34.9H85.8
+                c-9.6,0-17.4,7.8-17.4,17.4v69.8c0,9.6,7.8,17.4,17.4,17.4h17.4v104.7H85.8c-9.6,0-17.4,7.8-17.4,17.4S76.2,763,85.8,763h17.4v69.8
+                H85.8c-9.6,0-17.4,7.8-17.4,17.4c0,9.6,7.8,17.4,17.4,17.4h17.4v34.9H85.8c-9.6,0-17.4,7.8-17.4,17.4v69.8
+                c0,9.6,7.8,17.4,17.4,17.4h17.4v139.6H85.8c-9.6,0-17.4,7.8-17.4,17.4c0,9.6,7.8,17.4,17.4,17.4h17.4v191.9
+                c0,9.6,7.8,17.4,17.4,17.4h942.2c9.6,0,17.4-7.8,17.4-17.4v-191.9h17.4c9.6,0,17.4-7.8,17.4-17.4c0-9.6-7.8-17.4-17.4-17.4h-17.4
+                v-139.6h17.4c9.6,0,17.4-7.8,17.4-17.4V920c0-9.6-7.8-17.4-17.4-17.4h-17.4v-34.9h17.4c9.6,0,17.4-7.8,17.4-17.4
+                c0-9.6-7.8-17.4-17.4-17.4h-17.4V763h17.4c9.6,0,17.4-7.8,17.4-17.4s-7.8-17.4-17.4-17.4h-17.4V623.4H1097.8z M975.6,431.5
+                c0-9.6,7.8-17.4,17.4-17.4c9.6,0,17.4,7.8,17.4,17.4v17.4h-34.9V431.5z M975.6,483.8h34.9v34.9h-34.9V483.8z M905.8,553.6h174.5
+                v34.9H905.8V553.6z M870.9,1146.8v-52.3c0-28.9-23.4-52.3-52.3-52.3s-52.3,23.4-52.3,52.3v52.3h-34.9v-139.6h174.5v139.6H870.9z
+                 M836,1146.8h-34.9v-52.3c0-9.6,7.8-17.4,17.4-17.4s17.4,7.8,17.4,17.4V1146.8z M644.1,1042.1c-9.6,0-17.4,7.8-17.4,17.4v87.2
+                h-69.8v-87.2c0-9.6-7.8-17.4-17.4-17.4c-9.6,0-17.4,7.8-17.4,17.4v87.2h-34.9v-139.6h209.4v139.6h-34.9v-87.2
+                C661.6,1049.9,653.8,1042.1,644.1,1042.1z M382.4,1146.8h-34.9v-52.3c0-9.6,7.8-17.4,17.4-17.4c9.6,0,17.4,7.8,17.4,17.4V1146.8z
+                 M365,1042.1c-28.9,0-52.3,23.4-52.3,52.3v52.3h-34.9v-139.6h174.5v139.6h-34.9v-52.3C417.3,1065.6,393.9,1042.2,365,1042.1z
+                 M382.4,937.4v34.9h-34.9v-34.9H382.4z M801.2,972.3v-34.9H836v34.9H801.2z M801.2,885.1c0-9.6,7.8-17.4,17.4-17.4
+                s17.4,7.8,17.4,17.4v17.4h-34.9V885.1z M766.3,937.4v34.9h-34.9v-34.9H766.3z M574.3,780.4c0-9.6,7.8-17.4,17.4-17.4
+                c9.6,0,17.4,7.8,17.4,17.4v17.4h-34.9V780.4z M574.3,832.8h34.9v34.9h-34.9V832.8z M539.4,902.5h104.7c28.9,0,52.3,23.4,52.3,52.3
+                v17.4h-34.9v-17.4c0-9.6-7.8-17.4-17.4-17.4c-9.6,0-17.4,7.8-17.4,17.4v17.4h-69.8v-17.4c0-9.6-7.8-17.4-17.4-17.4
+                c-9.6,0-17.4,7.8-17.4,17.4v17.4h-34.9v-17.4C487.1,926,510.5,902.6,539.4,902.5z M452.2,972.3h-34.9v-34.9h34.9V972.3z
+                 M347.5,885.1c0-9.6,7.8-17.4,17.4-17.4c9.6,0,17.4,7.8,17.4,17.4v17.4h-34.9V885.1z M173,431.5c0-9.6,7.8-17.4,17.4-17.4
+                s17.4,7.8,17.4,17.4v17.4H173V431.5z M173,483.8h34.9v34.9H173V483.8z M103.2,553.6h174.5v34.9H103.2V553.6z M138.1,623.4h104.7
+                v104.7h-34.9v-52.3c0-9.6-7.8-17.4-17.4-17.4s-17.4,7.8-17.4,17.4v52.3h-34.9V623.4z M138.1,763h104.7v69.8H138.1V763z
+                 M138.1,867.7h104.7v34.9H138.1V867.7z M103.2,937.4h209.4v34.9H103.2V937.4z M138.1,1007.2h104.7v139.6H138.1V1007.2z
+                 M138.1,1181.7h104.7v174.5H138.1V1181.7z M277.7,1181.7h174.5v174.5h-34.9V1269c0-28.9-23.4-52.3-52.3-52.3
+                c-28.9,0-52.3,23.4-52.3,52.3v87.2h-34.9V1181.7z M382.4,1356.2h-34.9V1269c0-9.6,7.8-17.4,17.4-17.4c9.6,0,17.4,7.8,17.4,17.4
+                V1356.2z M487.1,1181.7h209.4v174.5h-34.9V1269c0-28.9-23.4-52.3-52.3-52.3h-34.9c-28.9,0-52.3,23.4-52.3,52.3v87.2h-34.9V1181.7z
+                 M626.7,1356.2h-69.8V1269c0-9.6,7.8-17.4,17.4-17.4h34.9c9.6,0,17.4,7.8,17.4,17.4V1356.2z M731.4,1181.7h174.5v174.5h-34.9V1269
+                c0-28.9-23.4-52.3-52.3-52.3s-52.3,23.4-52.3,52.3v87.2h-34.9V1181.7z M836,1356.2h-34.9V1269c0-9.6,7.8-17.4,17.4-17.4
+                s17.4,7.8,17.4,17.4V1356.2z M1045.4,1356.2H940.7v-174.5h104.7V1356.2z M1045.4,1146.8H940.7v-139.6h104.7V1146.8z M1080.3,972.3
+                H870.9v-34.9h209.4V972.3z M1045.4,902.5H940.7v-34.9h104.7V902.5z M1045.4,832.8H940.7V763h104.7V832.8z M1045.4,728.1h-34.9
+                v-52.3c0-9.6-7.8-17.4-17.4-17.4c-9.6,0-17.4,7.8-17.4,17.4v52.3h-34.9V623.4h104.7V728.1z"/>
+              </g>
+              <g id="sun">
+                <g id="linework">
+                  <path
+                    d="M899.9,121.9C899.9,121.9,899.9,121.9,899.9,121.9c-0.1,0-0.1-0.1-0.2-0.1c-33.2-12.4-70.2,4.5-82.6,37.7
+                  s4.5,70.2,37.7,82.6c0,0,0.1,0,0.1,0c0,0,0,0,0.1,0c33.2,12.4,70.3-4.5,82.6-37.7C950,171.4,933.1,134.3,899.9,121.9L899.9,121.9z
+                   M864.9,129.9c0.3,0,0.5-0.1,0.8-0.1c8.8-2,17.9-1.7,26.6,0.8c0.1,0,0.3,0.1,0.4,0.1c0.5,0.1,0.9,0.3,1.4,0.4
+                  c0.5,0.2,1.1,0.4,1.6,0.5c0.2,0.1,0.3,0.1,0.5,0.2c27.6,10.4,41.7,41.2,31.4,68.9c-10.3,27.6-41.2,41.8-68.8,31.5
+                  C831,221.9,817,191,827.3,163.4c4-10.7,11.1-19.6,20.6-25.9c0.3-0.2,0.5-0.4,0.8-0.6C853.6,133.7,859.1,131.3,864.9,129.9
+                  L864.9,129.9z"/>
+                  <path d="M904.3,109.8c2.8,1,5.8-0.4,6.9-3.1l16.5-44.1c1-2.8-0.4-5.8-3.1-6.9c-2.8-1-5.8,0.4-6.9,3.1l-16.5,44.1
+                  C900.1,105.7,901.5,108.7,904.3,109.8z"/>
+                  <path d="M949.6,209c-1,2.8,0.4,5.8,3.1,6.9l44.1,16.5c2.8,1,5.8-0.4,6.9-3.1c1-2.8-0.4-5.8-3.1-6.9l-44.1-16.5
+                  C953.7,204.8,950.6,206.2,949.6,209z"/>
+                  <path d="M754,141.7l44.1,16.5c2.8,1,5.8-0.4,6.9-3.1c1-2.8-0.4-5.8-3.1-6.9l-44.1-16.5c-2.8-1-5.8,0.4-6.9,3.1
+                  C749.9,137.6,751.3,140.7,754,141.7z"/>
+                  <path d="M950.4,152.8c1.3,0.5,2.7,0.5,4.1-0.1l42.9-19.6c2.7-1.2,3.9-4.4,2.6-7.1c-1.2-2.7-4.4-3.9-7.1-2.6l-42.9,19.6
+                  c-2.7,1.2-3.9,4.4-2.6,7.1C948.1,151.3,949.2,152.3,950.4,152.8z"/>
+                  <path d="M926.3,302.1c0.6,1.3,1.7,2.3,3,2.8c1.3,0.5,2.7,0.5,4.1-0.1c2.7-1.2,3.9-4.4,2.6-7.1l-19.6-42.9
+                  c-1.2-2.7-4.4-3.9-7.1-2.6c-2.7,1.2-3.9,4.4-2.6,7.1L926.3,302.1z"/>
+                  <path d="M838.2,109.2c0.6,1.3,1.7,2.3,3,2.8s2.7,0.5,4.1-0.1c2.7-1.2,3.9-4.4,2.6-7.1l-19.6-42.9c-1.2-2.7-4.4-3.9-7.1-2.6
+                  c-2.7,1.2-3.9,4.4-2.6,7.1L838.2,109.2z"/>
+                  <path d="M869,99.8c0.1,2.2,1.5,4.1,3.5,4.8c0.6,0.2,1.3,0.4,2.1,0.3c2.9-0.1,5.2-2.6,5.1-5.5l-0.8-23.5c-0.1-2.9-2.6-5.2-5.5-5.1
+                  c-2.9,0.1-5.2,2.6-5.1,5.5L869,99.8z"/>
+                  <path d="M796.1,113.7l17.2,16.1c0.5,0.5,1.1,0.9,1.8,1.1c2,0.7,4.3,0.3,5.8-1.4c2-2.2,1.9-5.5-0.3-7.5l-17.2-16.1
+                  c-2.2-2-5.5-1.9-7.5,0.3C793.8,108.3,793.9,111.7,796.1,113.7L796.1,113.7z"/>
+                  <path d="M958.8,257.9c2-2.2,1.9-5.5-0.3-7.5l-17.2-16.1c-2.2-2-5.5-1.9-7.5,0.3c-2,2.2-1.9,5.5,0.3,7.5l17.2,16.1
+                  c0.5,0.5,1.1,0.9,1.8,1.1C955,260,957.3,259.5,958.8,257.9L958.8,257.9z"/>
+                  <path d="M959.5,173.8c-2.9,0.1-5.2,2.6-5.1,5.5c0.1,2.2,1.5,4.1,3.5,4.8c0.6,0.2,1.3,0.4,2.1,0.3l23.5-0.8
+                  c2.9-0.1,5.2-2.6,5.1-5.5c-0.1-2.9-2.6-5.2-5.5-5.1L959.5,173.8z"/>
+                  <path d="M929.9,125.6c0.5,0.5,1.1,0.9,1.8,1.1c2,0.7,4.3,0.3,5.8-1.4l16.1-17.2c2-2.2,1.9-5.5-0.3-7.5c-2.2-2-5.5-1.9-7.5,0.3
+                  L929.6,118C927.6,120.2,927.7,123.6,929.9,125.6z"/>
+                </g>
+              </g>
+              <g id="cloud">
+                <path
+                  d="M433.1,331.3h-11.4c-29.5,0-53.6-24-53.6-53.6c0-29.5,24-53.5,53.5-53.6c0.1,0,0.2,0,0.3,0h0c29.4,0.1,53.3,24.1,53.3,53.6
+                c0,2.9,2.4,5.3,5.3,5.3s5.3-2.4,5.3-5.3c0-33.6-26-61.3-58.9-64c0-0.3,0-0.5,0-0.8c0-10.1,2.6-20,7.4-28.7c1.4-2.6,0.5-5.8-2.1-7.2
+                c-2.6-1.4-5.8-0.5-7.2,2.1c-5.7,10.3-8.7,22-8.7,33.9c0,0.3,0,0.5,0,0.8c-32.9,2.7-58.9,30.4-58.9,64c0,35.4,28.8,64.2,64.2,64.2
+                h11.4c2.9,0,5.3-2.4,5.3-5.3C438.4,333.7,436,331.3,433.1,331.3L433.1,331.3z"/>
+                <path
+                  d="M671.5,237.2c-7.2-21-27-35.4-49.6-35.4c-8.8,0-17.4,2.2-25,6.4C589.4,197,576.6,190,563,190c-3.4,0-6.7,0.4-9.9,1.2
+                c-4.2-12.9-12.2-24.4-22.9-33c-12.4-9.9-27.9-15.4-43.8-15.4c-17.4,0-34,6.4-46.9,18c-2.2,2-2.4,5.3-0.4,7.5c2,2.2,5.3,2.4,7.5,0.4
+                c10.9-9.9,25.1-15.3,39.8-15.3c26.3,0,49,16.9,56.7,41.6c-12.6,7.1-20.8,20.5-20.8,35.5c0,2.9,2.4,5.3,5.3,5.3
+                c2.9,0,5.3-2.4,5.3-5.3c0-12.3,7.4-23.1,18.5-27.7c0,0,0,0,0,0c3.6-1.5,7.6-2.3,11.5-2.3c11.5,0,22.2,6.7,27.1,17.2
+                c0.7,1.4,1.9,2.5,3.5,2.9c1.5,0.4,3.1,0.1,4.4-0.8c7-4.9,15.3-7.5,23.9-7.5c19.1,0,35.7,12.9,40.5,31.4c0.6,2.4,2.8,4.1,5.3,4
+                c0,0,1,0,1.3,0c23,0,41.8,18.7,41.8,41.8S692,331.3,669,331.3c-23,0-41.8-18.7-41.8-41.8c0-2.9-2.4-5.3-5.3-5.3
+                c-2.9,0-5.3,2.4-5.3,5.3c0,17,8.2,32.2,20.8,41.8H454.4c-2.9,0-5.3,2.4-5.3,5.3c0,2.9,2.4,5.3,5.3,5.3H669
+                c28.9,0,52.4-23.5,52.4-52.5C721.4,261.5,699.3,238.5,671.5,237.2L671.5,237.2z"/>
+              </g>
+            </svg>
 
           </div>
           <div class="col-md-6">
@@ -329,7 +421,7 @@
   </footer>
 
   <script src="js/scripts.js"></script>
-  
+
 </body>
 
 </html>
