style and cleaning updates
if commited this will update styling based on user test and update code sytax to show 0 errors

--- a/libro.html
+++ b/libro.html
@@ -240,12 +240,12 @@
           </div>
         </div>
         <div class="column">
-          <picture>
+
             <a href="img/book/Proj1-1_@2x.jpg" data-lightbox="Proj1-1_@2x.jpg">
-              <source srcset="img/book/Proj1-1_@1x.jpg" media="(max-width:767px)">
-              <img src="img/book/Proj1-1_@2x.jpg" alt="Preparatoria Ing. Pascual Ortiz Rubio Imagen">
+
+              <img srcset="img/book/Proj1-1_@1x.jpg 767w" src="img/book/Proj1-1_@2x.jpg" sizes="(max-width: 767px) 767px" alt="Preparatoria Ing. Pascual Ortiz Rubio Imagen">
             </a>
-          </picture>
+
         </div>
       </div>
       <p>Te invito a que leas el prólogo escrito por Pablo Chico Ponce de León, para conocer un poco más de la obra.</p>
@@ -270,12 +270,12 @@
         cada caso exige, significa, representa.</p>
       <div class="row2">
         <div class="col-md-6">
-          <picture>
+
             <a href="img/book/Proj1-2_@2x.jpg" data-lightbox="Proj1-2_@2x.jpg">
-              <source srcset="img/book/Proj1-2_@1x.jpg" media="(max-width:767px)">
-              <img src="img/book/Proj1-2_@2x.jpg" alt="Preparatoria Ing. Pascual Ortiz Rubio Imagen">
+
+              <img srcset="img/book/Proj1-2_@1x.jpg 767w" src="img/book/Proj1-2_@2x.jpg" sizes="(max-width: 767px) 767px" alt="Preparatoria Ing. Pascual Ortiz Rubio Imagen">
             </a>
-          </picture>
+
         </div>
         <div class="col-md-6">
           <p class="no-margin">Y es así como Eugenia María Azevedo Salomao y Luis Alberto Torres Garibay abordan un caso, altamente significativo por la efeméride del 100 aniversario de la fundación de la Universidad Michoacana de San Nicolás de
@@ -320,18 +320,26 @@
         <div class="col-md-6">
 
           <div>
-            <picture class="book-img-container">
-              <a href="img/book/Proj1-3_@2x.jpg" data-lightbox="Proj1-3_@2x.jpg">
-                <source srcset="img/book/Proj1-3_@1x.jpg" media="(max-width:767px)">
-                <img src="img/book/Proj1-3_@2x.jpg" alt="Preparatoria Ing. Pascual Ortiz Rubio Imagen" class="book-img">
+              <a href="img/book/Proj1-3_@2x.jpg" data-lightbox="Proj1-3_@2x.jpg" class="book-img-container">
+
+                <img srcset="img/book/Proj1-3_@1x.jpg 767w" src="img/book/Proj1-3_@2x.jpg" sizes="(max-width: 767px) 767px" alt="Preparatoria Ing. Pascual Ortiz Rubio Imagen" class="book-img">
               </a>
-            </picture>
           </div>
         </div>
       </div>
-      <div class="button-container">
-        <a href="publicaciones.html" class="primary-button">Ver publicaciones</a>
+      <div class="row4">
+          <div class="col-md-6">
+            <div class="button-container-left">
+              <a href="index.html" class="publicaciones-link">Back to home</a>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="button-container">
+              <a href="publicaciones.html" class="primary-button">Ver publicaciones</a>
+            </div>
+            </div>
       </div>
+
 
     </div>
   </main>
@@ -345,7 +353,7 @@
       </picture>
       <div class="hero-text">
         <h1>Ponte en contacto</h1>
-        <p>¿Te gustaría formar parte de mi red? No dudes en contactarme. Teléfono: <a href="tel: +524435285057">+524435285057.</a></p>
+        <p>¿Te gustaría formar parte de mi red? No dudes en contactarme. Teléfono: <a href="tel:+524435285057">+524435285057.</a></p>
         <div class="button-container2">
           <div class="center-button">
             <a href="mailto:eazevedosa@yahoo.com.mx" target="_blank" class="primary-button">Mandar email</a>
