--- a/publicaciones.html
+++ b/publicaciones.html
@@ -314,6 +314,17 @@
           </div>
         </div>
       </div>
+      <div class="row4">
+        <div class="col-md-6">
+          <div class="button-container-left">
+            <a href="index.html" class="publicaciones-link">Back to home</a>
+          </div>
+        </div>
+        <div class="col-md-6">
+
+        </div>
+      </div>
+
     </div>
   </main>
 
@@ -326,7 +337,7 @@
       </picture>
       <div class="hero-text">
         <h1>Ponte en contacto</h1>
-        <p>¿Te gustaría formar parte de mi red? No dudes en contactarme. Teléfono: <a href="tel: +524435285057">+524435285057.</a></p>
+        <p>¿Te gustaría formar parte de mi red? No dudes en contactarme. Teléfono: <a href="tel:+524435285057">+524435285057.</a></p>
         <div class="button-container2">
           <div class="center-button">
             <a href="mailto:eazevedosa@yahoo.com.mx" target="_blank" class="primary-button">Mandar email</a>
